...
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

...
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:id="@+id/etTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Teléfono"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

...
