<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_close_white_24px"
        android:title="Cancelar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_create"
        android:icon="@drawable/ic_done_white_24px"
        android:title="Crear"
        app:showAsAction="ifRoom"/>


</menu>