<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24px"
        android:title="Eliminar"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24px"
        android:title="Editar"
        app:showAsAction="ifRoom"/>


</menu>