...
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9">

                <EditText
                    android:id="@+id/etEditNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nombre" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

...
